# Helix

./: .gitignore  README.md  auto_deploy.py
programs/helix-storage/: Cargo.toml
programs/helix-storage/src/: error.rs  lib.rs  state.rs
programs/helix-storage/src/instructions/: create_share.rs  initialize.rs  mod.rs  register_file.rs
sdk-python/: setup.py
sdk-python/helix_sdk/: __init__.py  client.py  encryption.py
sdk/typescript/: package.json
sdk/typescript/src/: auth.ts  client.ts  encryption.ts  files.ts  index.ts  types.ts
