[package]
name = "helix-storage"
version = "0.1.0"
description = "Helix permanent encrypted storage program for Solana"
edition = "2021"
license = "MIT"
repository = "https://github.com/Helix-codes/helix-storage"

[lib]
crate-type = ["cdylib", "lib"]
name = "helix_storage"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
solana-program = "1.17"

[dev-dependencies]
anchor-client = "0.29.0"
